[package]
name = "calc_manager_rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
actix-web = "4.5.0"
serde = {version = "1.0.104", features = ["derive"]}
actix-rt ="2.9.0"
